--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
         </div>
         <div class="card" >
-            <img src="image/FLEX-SIX.jpg" alt="Farms">
+            <img src="image/Flex.jpeg" alt="Farms">
             <div class="card-content">
                 <h3>GRANULATED SOYA PROTEIN</h3>
                 <p>Just Integrated Farms and Allied Services (JIFAS) Limited was incorporated in 2010, located in Ibadan, Oyo State.</p>
@@ -142,7 +142,7 @@
             </div>
         </div>
         <div class="card" >
-            <img src="image/Flex_3.jpeg" alt="Farms">
+            <img src="image/Flex_one.jpeg" alt="Farms">
             <div class="card-content">
                 <h3>FORTIFIED BLENDED FOODS</h3>
                 <p>Just Integrated Farms and Allied Services (JIFAS) Limited was incorporated in 2010, located in Ibadan, Oyo State.</p>
